--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "fbemitter": "^3.0.0",
     "fbjs": "^3.0.0",
+    "js-cookie": "^3.0.1",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
